# Sep7ica

./: CMakeLists.txt  Calculator.cpp  Carte.cpp  Fereastra.cpp  Joc.cpp  Joc.h  Jucator.cpp  Menu.cpp  Pachet.cpp  README.md  carte.cpp  carte.h  jucator.cpp  main.cpp  pachet.cpp  pachet.h
Grafica/: Sprite.cpp  Sprite.h  Textura.cpp  Textura.h
Headers/: Calculator.h  Carte.h  Fereastra.h  Jucator.h  Menu.h  Pachet.h  carte.h  jucator.h  pachet.h
IO/: MOUSE.cpp  MOUSE.h
